@@ -2,6 +2,7 @@
 
 S3method(as_sge_accounting,raw_sge_accounting)
 S3method(available,queues)
+S3method(parse_category,sge_accounting)
 S3method(print,sge_accounting)
 export(as_sge_accounting)
 export(available)
@@ -13,6 +14,7 @@ export(host_table)
 export(lscpu)
 export(mem_info)
 export(on_hostname)
+export(parse_category)
 export(qhost)
 export(queues)
 export(read_raw_sge_accounting)
